@@ -44,6 +44,7 @@ import org.apache.mahout.math.Vector;
 import org.apache.mahout.math.VectorWritable;
 import org.apache.mahout.math.neighborhood.BruteSearch;
 import org.apache.mahout.math.neighborhood.FastProjectionSearch;
+import org.apache.mahout.math.neighborhood.LocalitySensitiveHashSearch;
 import org.apache.mahout.math.neighborhood.ProjectionSearch;
 import org.apache.mahout.math.random.WeightedThing;
 import org.junit.Test;
@@ -90,6 +91,7 @@ public class StreamingKMeansTestMR {
     return Arrays.asList(new Object[][]{
         {ProjectionSearch.class.getName(), SquaredEuclideanDistanceMeasure.class.getName()},
         {FastProjectionSearch.class.getName(), SquaredEuclideanDistanceMeasure.class.getName()},
+        {LocalitySensitiveHashSearch.class.getName(), SquaredEuclideanDistanceMeasure.class.getName()},
     });
   }
 
