@@ -61,6 +61,7 @@ public class SearchSanityTest extends MahoutTestCase {
         {new ProjectionSearch(new EuclideanDistanceMeasure(), NUM_PROJECTIONS, SEARCH_SIZE), dataPoints},
         {new FastProjectionSearch(new EuclideanDistanceMeasure(), NUM_PROJECTIONS, SEARCH_SIZE),
             dataPoints},
+        {new LocalitySensitiveHashSearch(new EuclideanDistanceMeasure(), SEARCH_SIZE), dataPoints},
     });
   }
 
@@ -183,6 +184,23 @@ public class SearchSanityTest extends MahoutTestCase {
       } catch (UnsupportedOperationException e) {
         // good enough that UOE is thrown
       }
+    }
+  }
+
+  @Test
+  public void testSearchFirst() {
+    searcher.clear();
+    searcher.addAll(dataPoints);
+    for (Vector datapoint : dataPoints) {
+      WeightedThing<Vector> first = searcher.searchFirst(datapoint, false);
+      WeightedThing<Vector> second = searcher.searchFirst(datapoint, true);
+      List<WeightedThing<Vector>> firstTwo = searcher.search(datapoint, 2);
+
+      assertEquals("First isn't self", 0, first.getWeight(), 0);
+      assertEquals("First isn't self", datapoint, first.getValue());
+      assertEquals("First doesn't match", first, firstTwo.get(0));
+      assertEquals(String.format("Second doesn't match got %f expected %f", second.getWeight(), firstTwo.get(1).getWeight()),
+          second, firstTwo.get(1));
     }
   }
 }
