@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 0.8 - unreleased
 
+__MAHOUT-1216: Add locality sensitive hashing and a LocalitySensitiveHash searcher (dfilimon)
+
 __MAHOUT-1181: Adding StreamingKMeans MapReduce classes (dfilimon)
 
   MAHOUT-1212: Incorrect classify-20newsgroups.sh file description (Julian Ortega via smarthi)
